--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,19 @@
   <div id="topmenu">
     this is the top menu
   </div>
-  <div id="leftmenu">
+  <div id="leftmenu" class="left-menu-close">
     <ul>
-      <li><a href="#"><i class="fas fa-home"></i></a></li>
-      <li><a href="#"></a><i class="fas fa-book"></i></a></li>
+      <li><a href="#"><i class="fas fa-home"></i><span class="left-menu-item-text hidden">Home</span></a></li>
+      <li><a href="#"><i class="fas fa-book"></i><span class="left-menu-item-text hidden">Item 1</span</a></li>
+      <li><a href="#"><i class="fas fa-book"></i><span class="left-menu-item-text hidden">Item 2</span></a></li>
+      <li><a href="#"><i class="fas fa-book"></i><span class="left-menu-item-text hidden">Last Item</span></a></li>
     </ul>
+
+    <button class="left-menu-toggle">>></button>
   </div>
 
-  <script src="https://kit.fontawesome.com/3f022aee91.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://kit.fontawesome.com/3f022aee91.js"></script>
+  <script type="text/javascript" src="js/layout.js"></script>
 </body>
 </html>
