--- a/public/signup.html
+++ b/public/signup.html
@@ -46,13 +46,6 @@
                 Dirección *<br>
                 <select id="sltProvince">
                     <option value="">Provincia</option>
-                    <option value="Alajuela">Alajuela</option>
-                    <option value="Cartago">Cartago</option>
-                    <option value="Guanacaste">Guanacaste</option>
-                    <option value="Heredia">Heredia</option>
-                    <option value="Limón">Limón</option>
-                    <option value="Puntarenas">Puntarenas</option>
-                    <option value="San José">San José</option>
                 </select>
                 <select id="sltCounty">
                     <option value="">Cantón</option>
@@ -66,6 +59,8 @@
 </body>
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="js/provinces.js"></script>
 <script src="js/users.js"></script>
+
 
 </html>
