cambio en rutas de ajax

--- a/public/signup.html
+++ b/public/signup.html
@@ -45,14 +45,14 @@
             </div>
             <div>
                 Dirección *<br>
+                <label for="sltProvince">Provincia</label>
                 <select id="sltProvince">
-                    <option value="">Provincia</option>
                 </select>
+                <label for="sltCounty">Cantón</label>
                 <select id="sltCounty">
-                    <option value="">Cantón</option>
                 </select>
+                <label for="sltDistrict">Distrito</label>
                 <select id="sltDistrict">
-                    <option value="">Distrito</option>
                 </select>
             </div>
             <div>
