--- a/public/books.html
+++ b/public/books.html
@@ -58,7 +58,7 @@
         </form>
 
         <script src='https://cdn.jsdelivr.net/npm/sweetalert2'></script> 
-        <script src='js/books.js'></script>
+        <script src='./js/users.js'></script>
     </body>
 
 </html>
