Agregados algunos estilos a las pagina

--- a/public/libraries/add.html
+++ b/public/libraries/add.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Registro de libreria</title>
+  
+  <link rel="stylesheet" type="text/css" href="../css/base.css">
 </head>
 
 <body>
@@ -15,7 +17,7 @@
       <legend>Datos generales:</legend>
       <p>
         <label for="txtComercialName">Nombre comercial: </label>
-        <input type="text" name="txtComercialName" id="txtComercialName">
+        <input type="text" name="txtComercialName" id="txtComercialName" class="control-error">
       </p>
 
       <p>
@@ -97,8 +99,8 @@
       </p>
     </fieldset>
 
-    <input type="submit" id="btnSubmit" value="Aceptar">
-    <input type="reset" id="btnReset" value="Limpiar">
+    <input type="submit" id="btnSubmit" value="Aceptar" class="button">
+    <input type="reset" id="btnReset" value="Limpiar" class="button">
   </form>
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"
