Cambios en librerias

--- a/public/libraries/add.html
+++ b/public/libraries/add.html
@@ -48,17 +48,17 @@
       <legend>Datos de administrador:</legend>
 
       <p>
-        <label for="txtFirstName">Nombre 1: </label>
-        <input type="text" name="txtFirstName" id="txtFirstName" class="required">
+        <label for="txtFirstName">Primer Nombre: </label>
+        <input type="text" name="txtFirstName" id="txtFirstName" class="required"><br>
 
-        <label for="txtMiddleName">Nombre 2: </label>
-        <input type="text" name="txtMiddleName" id="txtMiddleName">
+        <label for="txtMiddleName">Segundo Nombre: </label>
+        <input type="text" name="txtMiddleName" id="txtMiddleName"><br>
 
-        <label for="txtLastName1">Apellido 1: </label>
-        <input type="text" name="txtLastName1" id="txtLastName1" class="required">
+        <label for="txtLastName1">Primer Apellido: </label>
+        <input type="text" name="txtLastName1" id="txtLastName1" class="required"><br>
 
-        <label for="txtLastName1">Apellido 2: </label>
-        <input type="text" name="txtLastName2" id="txtLastName2" class="required">
+        <label for="txtLastName1">Segundo Apellido: </label>
+        <input type="text" name="txtLastName2" id="txtLastName2" class="required"><br>
       </p>
 
       <p>
@@ -87,7 +87,7 @@
       </p>
       <p>
         <label for="txtEmail">Email:</label>
-        <input type="text" name="txtEmail" id="txtEmail" class="required">
+        <input type="text" name="txtEmail" id="txtEmail" class="required email">
       </p>
       <p>
         <label for="txtPassword">Contrasena:</label>
