list & update books and clubs

--- a/public/books/listBooks.html
+++ b/public/books/listBooks.html
@@ -2,12 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Lista de Libros</title>
+        <link rel="stylesheet" href="../css/base.css">
     </head>
     <body>
-        <table id="tbl_libros">
+        <table id="tbl_books">
             <thead>
                 <tr>
                     <td>Nombre</td>
@@ -18,10 +17,11 @@
                     <td>Año</td>
                     <td>Editorial</td>
                     <td>Tipo</td>
-                    <td>Language</td>
+                    <td>Lenguage</td>
                     <td>ISBN</td>
                     <td>Precio</td>
                     <td>Cantidad</td>
+                    <td></td>
                 </tr>
             </thead>
             <tbody>
@@ -30,7 +30,7 @@
         </table>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://kit.fontawesome.com/3f022aee91.js"></script>
-        <script src="js/books.js"></script>
+        <script src="../js/books/listBooks.js"></script>
 
     </body>
 </html>
