--- a/public/books/updateBook.html
+++ b/public/books/updateBook.html
@@ -2,8 +2,8 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Registrar Libro</title>
-        <link rel="stylesheet" href="css/base.css">
+        <title>Actualizar Libro</title>
+        <link rel="stylesheet" href="../css/base.css">
     </head>
     <body>
         <form>
@@ -60,7 +60,7 @@
             <div>
                 <label for="slt_language">Idioma</label>
                 <select id="slt_language">
-                    <option value="---">--Seleccione un Idioma--</option>
+                    <option value="---"></option>
                     <option value="Español">Español</option>
                     <option value="Inglés">Inglés</option>
                     <option value="Portugués">Portugués</option>
@@ -88,7 +88,7 @@
         <script type="text/javascript" src="https://kit.fontawesome.com/3f022aee91.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2"></script> 
         
-        <script src="js/books.js"></script>
+        <script src="../js/books/updateBook.js"></script>
     </body>
 
 </html>
