--- a/public/clubs/createClub.html
+++ b/public/clubs/createClub.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Crear Club</title>
-        <link rel="stylesheet" href="css/base.css">
+        <link rel="stylesheet" href="../css/base.css">
     </head>
     <body>
         <form>
@@ -69,7 +69,7 @@
                 </select>
             </div>
             <div>
-                <label for="slt_day">Dia</label>
+                <label for="slt_day">Día</label>
                 <select id="slt_day">
                     <option value=""></option>
                     <option value="Lunes">Lunes</option>
@@ -94,6 +94,6 @@
         <script type="text/javascript" src="https://kit.fontawesome.com/3f022aee91.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2"></script> 
         
-        <script src="js/clubs.js"></script>
+        <script src="../js/clubs/createClubs.js"></script>
     </body>
 </html>
