--- a/public/users/create-password.html
+++ b/public/users/create-password.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/base.css">
-    <title>Sign In</title>
+    <title>Validar Pin</title>
 </head>
 <body>
     <form>
@@ -14,15 +14,24 @@
             <input type="text" id="txtEmail">
         </div>
         <div>
-            <label for="passPassword">Contraseña</label>
-            <input type="password" id="passPassword">
+            <label for="randToken">PIN de 6 dígitos</label>
+            <input type="text" id="randToken">
         </div>
-        <button type="button" id="btnSignIn">Iniciar Sesión</button>
+        <div>
+            <label for="password">Contraseña</label>
+            <input type="text" id="password">
+        </div>
+        <div>
+            <label for="passConfirm">Confirmar Contraseña</label>
+            <input type="text" id="passConfirm">
+        </div>
+
+        <button type="button" id="btnSavePassword">Crear Contraseña</button>
     </form>
 </body>
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-<script src="../js/users/signin.js"></script>
+<script src="../js/users/create-password.js"></script>
 
 
 </html>
