--- a/public/clubs/listClubs.html
+++ b/public/clubs/listClubs.html
@@ -6,6 +6,12 @@
         <link rel="stylesheet" href="../css/base.css">
     </head>
     <body>
+
+        <div class="search">
+            <label for="search">Buscar clubes:</label><br>
+            <input type="text" id="txtSearch" name="txtSearch">
+            <button id="btnSearch" class="button"><img src="../img/search.png" alt="Buscar"></button>
+        </div>
         <table id="tbl_clubs">
             <thead>
                 <tr>
