--- a/public/books/viewBook.html
+++ b/public/books/viewBook.html
@@ -9,11 +9,11 @@
         <form>
             <div>
                 <label for="txt_name">Nombre</label>
-                <input type="text" id="txt_name">
+                <span id="txt_name"></span>
             </div>
             <div>
                 <label for="txt_image">Imagen</label>
-                <input type="text" id="txt_image">
+                <span id="txt_image"></span>
                 </div>
             <div>
                 <label for="slt_genre">Género</label>
