--- a/public/users/savepass.html
+++ b/public/users/savepass.html
@@ -19,11 +19,11 @@
         </div>
         <div>
             <label for="password">Contraseña</label>
-            <input type="text" id="password">
+            <input type="password" id="password">
         </div>
         <div>
             <label for="passConfirm">Confirmar Contraseña</label>
-            <input type="text" id="passConfirm">
+            <input type="password" id="passConfirm">
         </div>
 
         <button type="button" id="btnSavePassword">Crear Contraseña</button>
@@ -31,7 +31,7 @@
 </body>
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-<script src="../js/users/create-password.js"></script>
+<script src="../js/users/savepass.js"></script>
 
 
 </html>
