--- a/public/books/viewBook.html
+++ b/public/books/viewBook.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Actualizar Libro</title>
+        <title>Ver Libro</title>
         <link rel="stylesheet" href="../css/base.css">
     </head>
     <body>
@@ -17,70 +17,44 @@
                 </div>
             <div>
                 <label for="slt_genre">Género</label>
-                <select id="slt_genre">
-                    <option value=""></option>
-                    <option value="Ficción">Ficción</option>
-                    <option value="Terror">Terror</option>
-                    <option value="Comedia">Comedia</option>
-                    <option value="Drama">Drama</option>
-                    <option value="Tragedia">Tragedia</option>
-                    <option value="Romance">Romance</option>
-                    <option value="Cuento">Cuento</option>
-                    <option value="Novela">Novela</option>
-                    <option value="Thriller">Thriller</option>
-                    <option value="Fábula">Fábula</option>
-                    <option value="Novela Didáctica">Novela Didáctica</option>
-                </select>
+                <span id="slt_genre"></span>
             </div>
             <div>
                 <label for="txt_author">Autor</label>
-                <input type="text" id="txt_author">
+                <span id="txt_author"></span>
             </div>
             <div>
                 <label for="txt_description">Descripción</label>
-                <input type="text" id="txt_description">
+                <span id="txt_description"></span>
                 </div>
             <div>
                 <label for="txt_year">Año</label>
-                <input type="number" id="txt_year">
+                <span id="txt_year"></span>
             </div>
             <div>
                 <label for="txt_editorial">Editorial</label>
-                <input type="text" id="txt_editorial">
+                <span id="txt_editorial"></span>
             </div>
             <div>
                 <label for="slt_type">Tipo</label>
-                <select id="slt_type">
-                    <option value=""></option>
-                    <option value="PDF">PDF</option>
-                    <option value="De Bolsillo">De Bolsillo</option>
-                    <option value="Pasta Dura">Pasta Dura</option>
-                </select>
+                <span id="slt_type"></span>
             </div>
             <div>
                 <label for="slt_language">Idioma</label>
-                <select id="slt_language">
-                    <option value="---"></option>
-                    <option value="Español">Español</option>
-                    <option value="Inglés">Inglés</option>
-                    <option value="Portugués">Portugués</option>
-                    <option value="Francés">Francés</option>
+                <span id="slt_language"></span>
                 </select>
             </div>
             <div>
                 <label for="txt_isbn">ISBN</label>
-                <input type="text" id="txt_isbn">
+                <span id="txt_isbn"></span>
             </div>
             <div>
                 <label for="txt_price">Precio</label>
-                <input type="number" id="txt_price">
+                <span id="txt_price"></span>
             </div>
             <div>
                 <label for="txt_quantity">Cantidad</label>
-                <input type="number" id="txt_quantity">
-            </div>
-            <div>
-                <button type="button" id="btn_register">Registrar</button>
+                <span id="txt_quantity"></span>
             </div>
 
         </form>
