Agregado landing page

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,11 @@
 
   <div id="topmenu-container">
     <div class="topmenu">
-      <img src="./img/titandev-text.png" alt="TitanDev Logo" width="118" height="18">
+      <ul>
+          <li><a href="./index.html"><img src="./img/titandev-text.png" alt="TitanDev Logo" width="118" height="18"></a></li>
+          <li><a href="./about.html">Sobre nosotros</a></li>
+          <li><a href="./aboutapp.html">Nuestro Producto</a></li>
+        </ul>
     </div>
 
     <div class="user-profile">
