--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
         <li><a href="./index.html"><img src="./img/home.png" alt="Home"><span class="left-menu-item-text hidden">Home</span></a></li>
         <li><a href="./libraries/index.html"><img src="./img/library.png" alt="Librerias"><span class="left-menu-item-text hidden">Librerias</span</a> </li> 
         <li><a href="./books/listBooks.html"><img src="./img/book.png" alt="Libros"><span class="left-menu-item-text hidden">Libros</span></a></li>
-        <li><a href="./authors/index.html"><img src="./img/author.png" alt="Autores"><span class="left-menu-item-text hidden">Autores</span></a></li>
+        <li><a href="./authors/authorsList.html"><img src="./img/author.png" alt="Autores"><span class="left-menu-item-text hidden">Autores</span></a></li>
         <li><a href="./clubs/listClubs.html"><img src="./img/clubs.png" alt="Clubes de lectura"><span class="left-menu-item-text hidden">Clubes de lectura</span></a></li>
         <li><a href="./Genre/index.html"><img src="./img/genre.png" alt="Genero"><span class="left-menu-item-text hidden">Generos</span></a></li>
         <li><a href="./users/register.html"><img src="./img/user.png" alt="Usuario"><span class="left-menu-item-text hidden">Usuario</span></a></li>
