Cambios en layout del sitio y formularios

--- a/public/libraries/index.html
+++ b/public/libraries/index.html
@@ -11,7 +11,7 @@
 <body onload="loadLibraries()">
   <h1>Librerias</h1>
 
-  <div class="search">
+  <div class="box">
     <label for="search">Buscar en librerias:</label><br>
     <input type="text" id="txtSearch" name="txtSearch">
     <button id="btnSearch" class="button"><img src="../img/search.png" alt="Buscar"></button>
