--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,19 @@
 </head>
 
 <body>
-    <div id="notifications">
-    </div>
+  <div id="notifications">
+  </div>
 
   <div id="topmenu-container">
     <div class="topmenu">
       <ul>
-          <li><a href="./index.html"><img src="./img/titandev-text.png" alt="TitanDev Logo" width="118" height="18"></a></li>
-          <li><a href="./about.html">Sobre nosotros</a></li>
-          <li><a href="./aboutapp.html">Nuestro Producto</a></li>
-        </ul>
+        <li>
+          <img src="./img/logo-white.png" alt="TitanDev Logo" width="30" height="30">
+          <img src="./img/titandev-text.png" alt="TitanDev Logo" width="118" height="18">
+        </li>
+        <li><a href="./about.html">Sobre nosotros</a></li>
+        <li><a href="./aboutapp.html">Nuestro Producto</a></li>
+      </ul>
     </div>
 
     <div class="user-profile">
@@ -29,7 +32,7 @@
     <div id="leftmenu" class="left-menu-close">
       <ul>
         <li><a href="./index.html"><img src="./img/home.png" alt="Home"><span class="left-menu-item-text hidden">Home</span></a></li>
-        <li><a href="./libraries/index.html"><img src="./img/library.png" alt="Librerias"><span class="left-menu-item-text hidden">Librerias</span</a> </li> 
+        <li><a href="./libraries/index.html"><img src="./img/library.png" alt="Librerias"><span class="left-menu-item-text hidden">Librerías</span></a></li>
         <li><a href="./books/listBooks.html"><img src="./img/book.png" alt="Libros"><span class="left-menu-item-text hidden">Libros</span></a></li>
         <li><a href="./authors/authorsList.html"><img src="./img/author.png" alt="Autores"><span class="left-menu-item-text hidden">Autores</span></a></li>
         <li><a href="./clubs/listClubs.html"><img src="./img/clubs.png" alt="Clubes de lectura"><span class="left-menu-item-text hidden">Clubes de lectura</span></a></li>
@@ -38,8 +41,9 @@
       </ul>
     </div>
 
-    <!-- Contenido aca -->
-
+    <div id="content">
+      <!-- Contenido aca -->
+    </div>
   </div>
 
   <script id="notificationTemplate" type="text/x-jQuery-tmpl">
@@ -50,8 +54,10 @@
     </div>
   </script>
 
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.js"></script>
   <script type="text/javascript" src="js/layout.js"></script>
 </body>
+
 </html>
