--- a/public/libraries/add.html
+++ b/public/libraries/add.html
@@ -9,102 +9,131 @@
 </head>
 
 <body>
-  <h1>Librerias</h1>
-  <h3>Crear una nueva libreria</h3>
+  <h2>Librerías</h2>
+  <h3>Crear una nueva librería</h3>
+  <p>Llene los siguientes formularios con los datos respectivos.</p>
+  <p>Los datos con el símbolo (*) son requeridos.</p>
 
-  <form name="frmAddUser" id="frmAddUser" method="POST">
+  <div class="box">
+    hola
+  </div>
+
+  <form name="frmAddUser" id="frmAddUser" method="POST" class="form">
     <fieldset>
       <legend>Datos generales:</legend>
-      <p>
-        <label for="txtComercialName">Nombre comercial: </label>
-        <input type="text" name="txtComercialName" id="txtComercialName" class="required">
-      </p>
+      
+      <div class="row">
+        <div class="col-6">
+          <label for="txtComercialName">Nombre comercial * </label>
+          <input type="text" name="txtComercialName" id="txtComercialName" class="required">
+        </div>
+        <div class="col-6">
+          <label for="txtComercialName">Marca: </label>
+          <input type="text" name="txtBrandName" id="txtBrandName">
+        </div>
+      </div>
 
-      <p>
-        <label for="txtComercialName">Marca (Nombre fantasia): </label>
-        <input type="text" name="txtBrandName" id="txtBrandName">
-      </p>
+      <div class="row">
+        <div class="col-4">
+          <label for="sltProvince">Provincia *</label>
+          <select name="sltProvince" id="sltProvince" class="required"></select>
+        </div>
+        <div class="col-4">
+          <label for="sltCounty">Canton *</label>
+          <select name="sltCounty" id="sltCounty" class="required"></select>
+        </div>
+        <div class="col-4">
+          <label for="sltDistrict">Distrito *</label>
+          <select name="sltDistrict" id="sltDistrict" class="required"></select>
+        </div>
+      </div>
 
-      <p>
-        <label for="sltProvince">Provincia:</label>
-        <select name="sltProvince" id="sltProvince" class="required"></select>
+      <div class="row">
+        <label for="txtAddress">Señas particulares *</label>
+        <textarea name="txtAddress" id="txtAddress" rows="10" class="required"></textarea>
+      </div>
 
-        <label for="sltCounty">Canton:</label>
-        <select name="sltCounty" id="sltCounty" class="required"></select>
-
-        <label for="sltDistrict">Distrito:</label>
-        <select name="sltDistrict" id="sltDistrict" class="required"></select>
-        <br>
-
-        <label for="txtAddress">Senas particulares:</label>
-        <textarea name="txtAddress" id="txtAddress" rows="10" cols="40" class="required"></textarea>
-      </p>
-
-      <label for="txtLocation">Ubicacion por Mapa:</label>
-      <input type="text" name="txtLocation" id="txtLocation" class="required">
+      <div class="row">
+        <label for="txtLocation">Ubicación por Mapa:</label>
+        <input type="text" name="txtLocation" id="txtLocation" class="required">
+      </div>
     </fieldset> 
 
     <fieldset>
       <legend>Datos de administrador:</legend>
 
-      <p>
-        <label for="txtFirstName">Primer Nombre: </label>
-        <input type="text" name="txtFirstName" id="txtFirstName" class="required"><br>
+      <div class="row">
+        <div class="col-2">
+          <label for="txtFirstName">Primer Nombre * </label>
+          <input type="text" name="txtFirstName" id="txtFirstName" class="required">
+        </div>
 
-        <label for="txtMiddleName">Segundo Nombre: </label>
-        <input type="text" name="txtMiddleName" id="txtMiddleName"><br>
+        <div class="col-2">
+          <label for="txtMiddleName">Segundo Nombre </label>
+          <input type="text" name="txtMiddleName" id="txtMiddleName">
+        </div>
 
-        <label for="txtLastName1">Primer Apellido: </label>
-        <input type="text" name="txtLastName1" id="txtLastName1" class="required"><br>
+        <div class="col-2">
+          <label for="txtLastName1">Primer Apellido * </label>
+          <input type="text" name="txtLastName1" id="txtLastName1" class="required">
+        </div>
 
-        <label for="txtLastName1">Segundo Apellido: </label>
-        <input type="text" name="txtLastName2" id="txtLastName2" class="required"><br>
-      </p>
+        <div class="col-2">
+          <label for="txtLastName1">Segundo Apellido * </label>
+          <input type="text" name="txtLastName2" id="txtLastName2" class="required">
+        </div>
+      </div>
 
-      <p>
-        <label for="sltIdType">Tipo de identificacion:</label>
-        <select name="sltIdType" id="sltIdType" class="required">
-          <option value=""></option>
-          <option value="nacional">Nacional</option>
-          <option value="residente">Residente</option>
-          <option value="nacionalizado">Nacionalizado</option>
-          <option value="extranjero">Extranjero</option>
-        </select>
-      </p>
+      <div class="row">
+        <div class="col-6">
+          <label for="sltIdType">Tipo de identificacion *</label>
+          <select name="sltIdType" id="sltIdType" class="required">
+            <option value=""></option>
+            <option value="nacional">Nacional</option>
+            <option value="residente">Residente</option>
+            <option value="nacionalizado">Nacionalizado</option>
+            <option value="extranjero">Extranjero</option>
+          </select>
+        </div>
+        <div class="col-6">
+          <label for="txtId">Numero de identificacion *</label>
+          <input type="text" name="txtId" id="txtId" class="required">
+        </div>
+      </div>
 
-      <p>
-        <label for="txtId">Numero de identificacion:</label>
-        <input type="text" name="txtId" id="txtId" class="required">
-      </p>
-      <p>
-        <label for="selGender">Genero:</label>
-        <select name="selGender" id="selGender" class="required">
-          <option value=""></option>
-          <option value="F">Femenino</option>
-          <option value="M">Masculino</option>
-          <option value="O">Otro</option>
-        </select>
-      </p>
-      <p>
-        <label for="txtEmail">Email:</label>
-        <input type="text" name="txtEmail" id="txtEmail" class="required email">
-      </p>
-      <p>
-        <label for="txtPassword">Contrasena:</label>
-        <input type="password" name="txtPassword" id="txtPassword" class="required">
-      </p>
-      <p>
-        <label for="txtBirthDate">Fecha de Nacimiento:</label>
-        <input type="date" name="txtBirthDate" id="txtBirthDate" class="required">
-      </p>
+      <div class="row">
+        <div class="col-6">
+          <label for="selGender">Genero *</label>
+          <select name="selGender" id="selGender" class="required">
+            <option value=""></option>
+            <option value="F">Femenino</option>
+            <option value="M">Masculino</option>
+            <option value="O">Otro</option>
+          </select>
+        </div>
+        <div class="col-6">
+          <label for="txtBirthDate">Fecha de Nacimiento *</label>
+          <input type="date" name="txtBirthDate" id="txtBirthDate" class="required">
+        </div>
+      </div>
+      
+      <div class="row">
+          <div class="col-6">
+            <label for="txtEmail">Email *</label>
+            <input type="text" name="txtEmail" id="txtEmail" class="required email">
+          </div>
+          <div class="col-6">
+            <label for="txtPassword">Contrasena *</label>
+            <input type="password" name="txtPassword" id="txtPassword" class="required">
+          </div>
+      </div>
     </fieldset>
 
-    <input type="submit" id="btnSubmit" value="Aceptar" class="button">
-    <input type="reset" id="btnReset" value="Limpiar" class="button">
+    <input type="submit" id="btnSubmit" value="Aceptar" class="button-primary">
+    <input type="reset" id="btnReset" value="Limpiar" class="button-secondary">
   </form>
 
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="../js/libraries.js"></script>
   <script type="text/javascript" src="../js/provinces.js"></script>
 </body>
