Cambios en estilos de librerias

--- a/public/libraries/add.html
+++ b/public/libraries/add.html
@@ -14,8 +14,10 @@
   <p>Llene los siguientes formularios con los datos respectivos.</p>
   <p>Los datos con el símbolo (*) son requeridos.</p>
 
-  <div class="box">
-    hola
+  <div class="box-alert">
+    <h3>Los siguientes campos necesitan ser revisados:</h3>
+    <ul>
+    </ul>
   </div>
 
   <form name="frmAddUser" id="frmAddUser" method="POST" class="form">
