Validaciones en librerias y usuarios y cambios en layout index

--- a/public/index.html
+++ b/public/index.html
@@ -12,19 +12,16 @@
   </div>
 
   <div id="topmenu-container">
-    <div class="topmenu">
-      <ul>
-        <li>
-          <img src="./img/logo-white.png" alt="TitanDev Logo" width="30" height="30">
-          <img src="./img/titandev-text.png" alt="TitanDev Logo" width="118" height="18">
-        </li>
-        <li><a href="./about.html">Sobre nosotros</a></li>
-        <li><a href="./aboutapp.html">Nuestro Producto</a></li>
-      </ul>
+    <div class="topmenu-item">
+      <span class="helper"><img src="./img/logo-white.png" alt="TitanDev Logo" width="30" height="30"></span>
+      <span class="helper"><img src="./img/titandev-text.png" alt="TitanDev Logo" width="118" height="18"></span>
     </div>
-
-    <div class="user-profile">
-      <a href="#"><img src="./img/user-portrait.jpeg" alt="Usuario" height="40" width="40"></a>
+    <div class="topmenu-item"><a href="./about.html">Sobre nosotros</a></div>
+    <div class="topmenu-item"><a href="./aboutapp.html">Nuestro Producto</a></div>
+    <div class="topmenu-item user-profile">
+      <span class="helper">
+        <a href="#"><img src="./img/user-portrait.jpeg" alt="Usuario" height="30" width="30"></a>
+      </span>
     </div>
   </div>
 
