--- a/public/libraries/add.html
+++ b/public/libraries/add.html
@@ -13,7 +13,7 @@
   <h2>Librerías</h2>
   <h3>Crear una nueva librería</h3>
   <p>Llene los siguientes formularios con los datos respectivos.</p>
-  <p>Los datos con el símbolo (*) son requeridos.</p>
+  <p>Los datos con el símbolo <span class="red">(*)</span> son requeridos.</p>
 
   <div class="box-alert" style="display: none">
     <h4>Los siguientes campos necesitan ser revisados:</h4>
@@ -26,38 +26,38 @@
       
       <div class="row">
         <div class="col-6">
-          <label for="txtComercialName">Nombre comercial * </label>
-          <input type="text" name="txtComercialName" id="txtComercialName" class="required">
+          <label for="commercialName">Nombre comercial <span class="red">*</span> </label>
+          <input type="text" name="commercialName" id="commercialName" class="required">
         </div>
         <div class="col-6">
-          <label for="txtComercialName">Marca: </label>
-          <input type="text" name="txtBrandName" id="txtBrandName">
+          <label for="brandName">Marca: </label>
+          <input type="text" name="brandName" id="brandName">
         </div>
       </div>
 
       <div class="row">
         <div class="col-4">
-          <label for="sltProvince">Provincia *</label>
-          <select name="sltProvince" id="sltProvince" class="required"></select>
+          <label for="province">Provincia <span class="red">*</span></label>
+          <select name="province" id="province" class="required"></select>
         </div>
         <div class="col-4">
-          <label for="sltCounty">Canton *</label>
-          <select name="sltCounty" id="sltCounty" class="required"></select>
+          <label for="county">Canton <span class="red">*</span></label>
+          <select name="county" id="county" class="required"></select>
         </div>
         <div class="col-4">
-          <label for="sltDistrict">Distrito *</label>
-          <select name="sltDistrict" id="sltDistrict" class="required"></select>
+          <label for="district">Distrito <span class="red">*</span></label>
+          <select name="district" id="district" class="required"></select>
         </div>
       </div>
 
       <div class="row">
-        <label for="txtAddress">Señas particulares *</label>
-        <textarea name="txtAddress" id="txtAddress" rows="10" class="required"></textarea>
+        <label for="address">Señas particulares <span class="red">*</span></label>
+        <textarea name="address" id="address" rows="10" class="required"></textarea>
       </div>
 
       <div class="row">
-        <label for="txtLocation">Ubicación por Mapa:</label>
-        <input type="text" name="txtLocation" id="txtLocation" class="required">
+        <label for="location">Ubicación por Mapa:</label>
+        <input type="text" name="location" id="location" class="required">
       </div>
     </fieldset> 
 
@@ -66,30 +66,30 @@
 
       <div class="row">
         <div class="col-2">
-          <label for="txtFirstName">Primer Nombre * </label>
-          <input type="text" name="txtFirstName" id="txtFirstName" class="required">
+          <label for="firstName">Primer Nombre <span class="red">*</span> </label>
+          <input type="text" name="firstName" id="firstName" class="required">
         </div>
 
         <div class="col-2">
-          <label for="txtMiddleName">Segundo Nombre </label>
-          <input type="text" name="txtMiddleName" id="txtMiddleName">
+          <label for="middleName">Segundo Nombre </label>
+          <input type="text" name="middleName" id="middleName">
         </div>
 
         <div class="col-2">
-          <label for="txtLastName1">Primer Apellido * </label>
-          <input type="text" name="txtLastName1" id="txtLastName1" class="required">
+          <label for="firstLastName">Primer Apellido <span class="red">*</span> </label>
+          <input type="text" name="firstLastName" id="firstLastName" class="required">
         </div>
 
         <div class="col-2">
-          <label for="txtLastName1">Segundo Apellido * </label>
-          <input type="text" name="txtLastName2" id="txtLastName2" class="required">
+          <label for="secondLastName">Segundo Apellido</label>
+          <input type="text" name="secondLastName" id="secondLastName" class="required">
         </div>
       </div>
 
       <div class="row">
         <div class="col-6">
-          <label for="sltIdType">Tipo de identificacion *</label>
-          <select name="sltIdType" id="sltIdType" class="required">
+          <label for="idType">Tipo de identificación <span class="red">*</span></label>
+          <select name="idType" id="idType" class="required">
             <option value=""></option>
             <option value="nacional">Nacional</option>
             <option value="residente">Residente</option>
@@ -98,15 +98,15 @@
           </select>
         </div>
         <div class="col-6">
-          <label for="txtId">Numero de identificacion *</label>
-          <input type="text" name="txtId" id="txtId" class="required">
+          <label for="id">Numero de identificacion <span class="red">*</span></label>
+          <input type="text" name="id" id="id" class="required">
         </div>
       </div>
 
       <div class="row">
         <div class="col-6">
-          <label for="selGender">Genero *</label>
-          <select name="selGender" id="selGender" class="required">
+          <label for="gender">Genero <span class="red">*</span></label>
+          <select name="gender" id="gender" class="required">
             <option value=""></option>
             <option value="F">Femenino</option>
             <option value="M">Masculino</option>
@@ -114,19 +114,19 @@
           </select>
         </div>
         <div class="col-6">
-          <label for="txtBirthDate">Fecha de Nacimiento *</label>
-          <input type="date" name="txtBirthDate" id="txtBirthDate" class="required">
+          <label for="birthDate">Fecha de Nacimiento</label>
+          <input type="date" name="birthDate" id="birthDate" class="required">
         </div>
       </div>
       
       <div class="row">
           <div class="col-6">
-            <label for="txtEmail">Email *</label>
-            <input type="text" name="txtEmail" id="txtEmail" class="required email">
+            <label for="email">Email <span class="red">*</span></label>
+            <input type="text" name="email" id="email" class="required email">
           </div>
           <div class="col-6">
-            <label for="txtPassword">Contrasena *</label>
-            <input type="password" name="txtPassword" id="txtPassword" class="required">
+            <label for="password">Contraseña</label>
+            <input type="password" name="password" id="password" class="required">
           </div>
       </div>
     </fieldset>
