--- a/public/books/updateBook.html
+++ b/public/books/updateBook.html
@@ -38,7 +38,7 @@
             </div>
             <div>
                 <label for="txt_description">Descripción</label>
-                <input type="text" id="txt_description">
+                <textarea id = "txt_description" rows = "10" name = "txt_description"></textarea>
                 </div>
             <div>
                 <label for="txt_year">Año</label>
